--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "nav.corporate": "Corporate",
   "nav.devices": "Devices",
   "nav.settings": "Settings",
+  "sidebar.roleLabel": "Role:",
   "header.summary": "Summary",
   "header.wellness": "Wellness",
   "header.analytics": "Analytics",
