--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -7,6 +7,7 @@
   "nav.corporate": "Corporate",
   "nav.devices": "Apparaten",
   "nav.settings": "Instellingen",
+  "sidebar.roleLabel": "Rol:",
   "header.summary": "Overzicht",
   "header.wellness": "Welzijn",
   "header.analytics": "Analytics",
