Align dashboard assets with start pack and parity features

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -32,7 +32,7 @@
   "label.range": "Range",
   "label.team.all": "All Teams",
   "label.export.csv": "Export CSV",
-  "label.export.pdf": "Export Pilot Summary",
+  "label.export.pdf": "Export Pilot Summary (PDF)",
   "label.download": "Export",
   "range.day": "Day",
   "range.7d": "7 Days",
@@ -60,6 +60,7 @@
   "delta.up": "Improved vs prior",
   "delta.down": "Declined vs prior",
   "delta.equal": "No change vs prior",
+  "delta.header": "Δ vs prior period",
   "about.title": "About this platform",
   "about.bullet1": "Aggregates only; no raw ECG/HRV; fixed thresholds; no ML",
   "about.bullet2": "EU cloud hosting with encryption in transit and at rest; role-based access",
