--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -32,7 +32,7 @@
   "label.range": "Bereik",
   "label.team.all": "Alle teams",
   "label.export.csv": "Exporteer CSV",
-  "label.export.pdf": "Exporteer pilotsamenvatting",
+  "label.export.pdf": "Exporteer pilotsamenvatting (PDF)",
   "label.download": "Exporteren",
   "range.day": "Dag",
   "range.7d": "7 dagen",
@@ -60,6 +60,7 @@
   "delta.up": "Verbeterd t.o.v. vorige",
   "delta.down": "Achteruit t.o.v. vorige",
   "delta.equal": "Geen wijziging t.o.v. vorige",
+  "delta.header": "Δ t.o.v. vorige periode",
   "about.title": "Over dit platform",
   "about.bullet1": "Alleen aggregaten; geen ruwe ECG/HRV; vaste drempels; geen ML",
   "about.bullet2": "EU-cloud met encryptie in transit en in rust; toegang op rollen",
