Implement night-shift scenario and analytics enhancements

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -21,6 +21,7 @@
   "section.breakdowns": "Risk Breakdown",
   "section.devicesOverview": "Fleet status",
   "section.devicesTable": "Devices by team",
+  "section.corporateEvents": "Detected Events",
   "section.pilotHeatmap": "Heatmap snapshot",
   "section.pilotEvents": "Events summary",
   "label.movingAverage": "MA(3)",
@@ -62,10 +63,12 @@
   "delta.equal": "No change",
   "delta.header": "Δ vs prior period",
   "about.title": "About this platform",
-  "about.bullet1": "Aggregates only; no raw ECG/HRV; fixed thresholds; no ML",
-  "about.bullet2": "EU cloud hosting with encryption in transit and at rest; role-based access",
-  "about.bullet3": "Device battery lasts 12+ hours for a typical day",
-  "about.bullet4": "ECG software accuracy validated at 2.4–4.7% intervals",
+  "about.bullet1": "Aggregates only",
+  "about.bullet2": "No machine learning applied",
+  "about.bullet3": "Hosted in EU cloud regions",
+  "about.bullet4": "Encryption in transit and at rest",
+  "about.bullet5": "Wearables deliver 12+ hour battery life",
+  "about.bullet6": "Accuracy validated at 2.4–4.7%",
   "about.close": "Close",
   "status.onTarget": "On target",
   "status.belowTarget": "Below target",
@@ -87,6 +90,13 @@
   "pilot.caption": "Pilot readiness",
   "pilot.gdpr": "GDPR note: dashboards expose only aggregates with no personal data.",
   "toggle.ma": "Moving average",
+  "activity.date": "Date",
+  "activity.team": "Team",
+  "activity.hydration": "Hydration Logs",
+  "activity.caffeine": "Caffeine Logs",
+  "activity.meds": "Medications Logged",
+  "activity.steps": "Active Steps %",
+  "activity.empty": "No activity data",
   "events.filterHeatmap": "Filter heatmap to date",
   "events.openLog": "Open activity log",
   "events.filter.teamAll": "All teams",
@@ -108,5 +118,10 @@
   "events.severity.critical": "Critical",
   "events.severity.warning": "Warning",
   "events.severity.info": "Informational",
+  "events.count.total": "Total {count}",
+  "events.count.critical": "Critical {count}",
+  "events.count.warning": "Warning {count}",
+  "events.count.info": "Info {count}",
+  "events.filteredBy": "Filtered by {label}",
   "label.generatedAt": "Generated {date}"
 }
