--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -21,6 +21,7 @@
   "section.breakdowns": "Risicoverdeling",
   "section.devicesOverview": "Vlootstatus",
   "section.devicesTable": "Apparaten per team",
+  "section.corporateEvents": "Gedetecteerde events",
   "section.pilotHeatmap": "Heatmap-momentopname",
   "section.pilotEvents": "Gebeurtenissamenvatting",
   "label.movingAverage": "MA(3)",
@@ -62,10 +63,12 @@
   "delta.equal": "Geen wijziging",
   "delta.header": "Δ t.o.v. vorige periode",
   "about.title": "Over dit platform",
-  "about.bullet1": "Alleen aggregaten; geen ruwe ECG/HRV; vaste drempels; geen ML",
-  "about.bullet2": "EU-cloud met encryptie in transit en in rust; toegang op rollen",
-  "about.bullet3": "Apparaatbatterij gaat 12+ uur mee op een typische dag",
-  "about.bullet4": "ECG-software accuraat binnen 2,4–4,7%",
+  "about.bullet1": "Alleen aggregaten",
+  "about.bullet2": "Geen machine learning",
+  "about.bullet3": "Gehost in EU-cloud",
+  "about.bullet4": "Encryptie in transit en in rust",
+  "about.bullet5": "Wearables houden het 12+ uur vol",
+  "about.bullet6": "Nauwkeurigheid 2,4–4,7%",
   "about.close": "Sluiten",
   "status.onTarget": "Op schema",
   "status.belowTarget": "Onder doel",
@@ -108,5 +111,17 @@
   "events.severity.critical": "Kritiek",
   "events.severity.warning": "Waarschuwing",
   "events.severity.info": "Info",
+  "events.count.total": "Totaal {count}",
+  "events.count.critical": "Kritiek {count}",
+  "events.count.warning": "Waarschuwing {count}",
+  "events.count.info": "Info {count}",
+  "events.filteredBy": "Gefilterd op {label}",
+  "activity.date": "Datum",
+  "activity.team": "Team",
+  "activity.hydration": "Hydratatie-logs",
+  "activity.caffeine": "Cafeïne-logs",
+  "activity.meds": "Medicatie vastgelegd",
+  "activity.steps": "Actieve stappen %",
+  "activity.empty": "Geen activiteitsgegevens",
   "label.generatedAt": "Gegenereerd op {date}"
 }
