Add attribute-aware i18n and translate corporate UI strings

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -22,6 +22,9 @@
   "section.devicesOverview": "Fleet status",
   "section.devicesTable": "Devices by team",
   "section.corporateEvents": "Detected Events",
+  "section.corporateOverview": "Overview KPIs",
+  "section.corporateHeatmap": "Divisional Heatmap",
+  "section.corporateActivity": "Activity Log",
   "section.pilotHeatmap": "Heatmap snapshot",
   "section.pilotEvents": "Events summary",
   "label.movingAverage": "MA(3)",
@@ -35,6 +38,10 @@
   "label.export.csv": "Export CSV",
   "label.export.pdf": "Export Pilot Summary (PDF)",
   "label.download": "Export",
+  "badge.aggregatesOnly": "AGGREGATES ONLY",
+  "badge.noBiosignals": "NO RAW BIOSIGNALS",
+  "badge.fixedThresholds": "FIXED THRESHOLDS",
+  "badge.noMl": "NO ML",
   "range.day": "Day",
   "range.7d": "7 Days",
   "range.month": "Month",
@@ -89,6 +96,9 @@
   "devices.distribution": "Battery distribution",
   "pilot.caption": "Pilot readiness",
   "pilot.gdpr": "GDPR note: dashboards expose only aggregates with no personal data.",
+  "legend.low": "≤55 red",
+  "legend.mid": "56–69 amber",
+  "legend.high": "≥70 green",
   "toggle.ma": "Moving average",
   "activity.date": "Date",
   "activity.team": "Team",
@@ -123,5 +133,10 @@
   "events.count.warning": "Warning {count}",
   "events.count.info": "Info {count}",
   "events.filteredBy": "Filtered by {label}",
-  "label.generatedAt": "Generated {date}"
+  "heatmap.empty": "No heatmap data",
+  "label.generatedAt": "Generated {date}",
+  "aria.about": "About",
+  "aria.scenario": "Scenario toggles",
+  "aria.languageSwitcher": "Language switcher",
+  "aria.corporateHeatmap": "Wellbeing heatmap"
 }
