--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -22,6 +22,9 @@
   "section.devicesOverview": "Vlootstatus",
   "section.devicesTable": "Apparaten per team",
   "section.corporateEvents": "Gedetecteerde events",
+  "section.corporateOverview": "Overzicht KPI's",
+  "section.corporateHeatmap": "Divisie-heatmap",
+  "section.corporateActivity": "Activiteitslog",
   "section.pilotHeatmap": "Heatmap-momentopname",
   "section.pilotEvents": "Gebeurtenissamenvatting",
   "label.movingAverage": "MA(3)",
@@ -35,6 +38,10 @@
   "label.export.csv": "Exporteer CSV",
   "label.export.pdf": "Exporteer pilotsamenvatting (PDF)",
   "label.download": "Exporteren",
+  "badge.aggregatesOnly": "ALLEEN AGGREGATEN",
+  "badge.noBiosignals": "GEEN RUWE BIOSIGNALEN",
+  "badge.fixedThresholds": "VASTE DREMPELS",
+  "badge.noMl": "GEEN ML",
   "range.day": "Dag",
   "range.7d": "7 dagen",
   "range.month": "Maand",
@@ -89,6 +96,9 @@
   "devices.distribution": "Batterijverdeling",
   "pilot.caption": "Pilotgereedheid",
   "pilot.gdpr": "GDPR-opmerking: dashboards tonen alleen aggregaten zonder persoonsgegevens.",
+  "legend.low": "≤55 rood",
+  "legend.mid": "56–69 amber",
+  "legend.high": "≥70 groen",
   "toggle.ma": "Voortschrijdend gem.",
   "events.filterHeatmap": "Filter heatmap op datum",
   "events.openLog": "Open activiteitenlog",
@@ -116,6 +126,7 @@
   "events.count.warning": "Waarschuwing {count}",
   "events.count.info": "Info {count}",
   "events.filteredBy": "Gefilterd op {label}",
+  "heatmap.empty": "Geen heatmapgegevens",
   "activity.date": "Datum",
   "activity.team": "Team",
   "activity.hydration": "Hydratatie-logs",
@@ -123,5 +134,9 @@
   "activity.meds": "Medicatie vastgelegd",
   "activity.steps": "Actieve stappen %",
   "activity.empty": "Geen activiteitsgegevens",
-  "label.generatedAt": "Gegenereerd op {date}"
+  "label.generatedAt": "Gegenereerd op {date}",
+  "aria.about": "Over",
+  "aria.scenario": "Scenarioknoppen",
+  "aria.languageSwitcher": "Taalwisselaar",
+  "aria.corporateHeatmap": "Welzijnsheatmap"
 }
