--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -32,6 +32,7 @@
   "label.teamFilter": "Team",
   "label.language": "Language",
   "label.updated": "Updated",
+  "ui.updated": "Updated",
   "label.updatedAt": "Updated {date}",
   "label.range": "Range",
   "label.team.all": "All Teams",
@@ -52,6 +53,10 @@
   "kpi.weeklyActive": "Weekly Active %",
   "kpi.nps": "NPS",
   "kpi.alertCount": "Alert Count",
+  "kpi.orgWellbeing": "Org Wellbeing",
+  "kpi.highStress": "High Stress %",
+  "kpi.elevatedFatigue": "Elevated Fatigue %",
+  "kpi.activeEngagement": "Active Engagement %",
   "kpi.wellbeing": "Org Wellbeing",
   "kpi.devicesOnline": "Devices online %",
   "kpi.avgBattery": "Avg Battery %",
@@ -60,6 +65,7 @@
   "metric.elevatedFatigue": "Elevated Fatigue %",
   "metric.activeEngagement": "Active Engagement %",
   "caption.orgAverage": "Org avg",
+  "caption.orgAvg": "Org avg",
   "caption.separator": " · ",
   "caption.team": "{team}",
   "caption.range": "{range}",
@@ -83,6 +89,7 @@
   "status.value": "Value",
   "status.target": "Target",
   "status.noData": "No data available",
+  "guard.insufficient": "Aggregated metrics withheld — insufficient group size",
   "devices.status.good": "Good",
   "devices.status.caution": "Monitor",
   "devices.status.poor": "Action",
@@ -134,6 +141,7 @@
   "events.count.info": "Info {count}",
   "events.filteredBy": "Filtered by {label}",
   "heatmap.empty": "No heatmap data",
+  "toast.summaryError": "Unable to load summary data",
   "label.generatedAt": "Generated {date}",
   "aria.about": "About",
   "aria.scenario": "Scenario toggles",
