--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -32,6 +32,7 @@
   "label.teamFilter": "Team",
   "label.language": "Taal",
   "label.updated": "Bijgewerkt",
+  "ui.updated": "Bijgewerkt",
   "label.updatedAt": "Bijgewerkt {date}",
   "label.range": "Bereik",
   "label.team.all": "Alle teams",
@@ -52,6 +53,10 @@
   "kpi.weeklyActive": "Wekelijks actief %",
   "kpi.nps": "NPS",
   "kpi.alertCount": "Aantal alerts",
+  "kpi.orgWellbeing": "Organisatie-welzijn",
+  "kpi.highStress": "Hoog stress %",
+  "kpi.elevatedFatigue": "Verhoogde vermoeidheid %",
+  "kpi.activeEngagement": "Actieve betrokkenheid %",
   "kpi.wellbeing": "Organisatie-welzijn",
   "kpi.devicesOnline": "Apparaten online %",
   "kpi.avgBattery": "Gem. batterij %",
@@ -60,6 +65,7 @@
   "metric.elevatedFatigue": "Verhoogde vermoeidheid %",
   "metric.activeEngagement": "Actieve betrokkenheid %",
   "caption.orgAverage": "Organisatiegem.",
+  "caption.orgAvg": "Organisatiegem.",
   "caption.separator": " · ",
   "caption.team": "{team}",
   "caption.range": "{range}",
@@ -83,6 +89,7 @@
   "status.value": "Waarde",
   "status.target": "Doel",
   "status.noData": "Geen gegevens beschikbaar",
+  "guard.insufficient": "Geaggregeerde cijfers verborgen — onvoldoende groepsgrootte",
   "devices.status.good": "Goed",
   "devices.status.caution": "Monitor",
   "devices.status.poor": "Actie",
@@ -127,6 +134,7 @@
   "events.count.info": "Info {count}",
   "events.filteredBy": "Gefilterd op {label}",
   "heatmap.empty": "Geen heatmapgegevens",
+  "toast.summaryError": "Overzichtsgegevens konden niet worden geladen",
   "activity.date": "Datum",
   "activity.team": "Team",
   "activity.hydration": "Hydratatie-logs",
