chore: refresh guard messaging and cache busting

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -33,6 +33,9 @@
   "label.language": "Language",
   "label.updated": "Updated",
   "ui.updated": "Updated",
+  "ui.exportCSV": "Export CSV",
+  "ui.loadScenario": "Load Night-Shift Scenario",
+  "ui.returnLive": "Return to Live View",
   "label.updatedAt": "Updated {date}",
   "label.range": "Range",
   "label.team.all": "All Teams",
