--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -33,6 +33,9 @@
   "label.language": "Taal",
   "label.updated": "Bijgewerkt",
   "ui.updated": "Bijgewerkt",
+  "ui.exportCSV": "Exporteer CSV",
+  "ui.loadScenario": "Nachtdienstscenario laden",
+  "ui.returnLive": "Terug naar live-weergave",
   "label.updatedAt": "Bijgewerkt {date}",
   "label.range": "Bereik",
   "label.team.all": "Alle teams",
