feat(demo): introduce demo landing experience

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "nav.corporate": "Corporate",
   "nav.devices": "Devices",
   "nav.settings": "Settings",
+  "nav.demo": "Demo",
   "sidebar.roleLabel": "Role:",
   "header.summary": "Summary",
   "header.wellness": "Wellness",
@@ -16,6 +17,43 @@
   "header.devices": "Devices",
   "header.settings": "Settings",
   "header.pilot": "Pilot Dashboard",
+  "demo.title": "Demo",
+  "demo.orgStructure": "Organization",
+  "demo.demographics": "Demographics",
+  "demo.genderOverall": "Gender — Overall",
+  "demo.ageOverall": "Age — Overall",
+  "demo.byDepartment": "By department",
+  "demo.shiftPattern": "Shift Pattern",
+  "demo.exportBrief": "Export Site Brief (PDF)",
+  "demo.badge": "Demo · {name} · {headcount} staff · 24/7",
+  "demo.rotation": "Rotation",
+  "demo.shifts": "Shifts",
+  "demo.headcount": "Headcount",
+  "demo.site": "Site",
+  "demo.brigades": "Brigades",
+  "demo.pattern": "Pattern",
+  "demo.day": "Day",
+  "demo.night": "Night",
+  "demo.off": "Off",
+  "demo.department": "Department",
+  "demo.departmentCount": "{count} departments",
+  "demo.rotationDetail": "{on} days on / {off} days off",
+  "demo.shiftMetaOps": "{groups}: {pattern}",
+  "demo.shiftMetaSupport": "{groups}: {pattern}",
+  "demo.departmentSummary": "{name}: {headcount}",
+  "demo.shiftSummary": "{group} {brigade}: {pattern}",
+  "demo.gender.male": "Male",
+  "demo.gender.female": "Female",
+  "demo.gender.other": "Other",
+  "demo.shiftLabel.day": "{label} shift",
+  "demo.shiftLabel.night": "{label} shift",
+  "demo.shiftLabel.off": "{label}",
+  "demo.heroAlt": "{name} offshore platform illustration",
+  "demo.heroLabel": "{name} hero image",
+  "demo.error": "Unable to load demo data",
+  "demo.loading": "Loading demo data…",
+  "demo.exportUnavailable": "Export not available.",
+  "demo.exportError": "Unable to export PDF",
   "section.engagementOverview": "Engagement KPIs",
   "section.wellbeingTracker": "Wellbeing Score Tracker",
   "section.breakdowns": "Risk Breakdown",
