--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -7,6 +7,7 @@
   "nav.corporate": "Corporate",
   "nav.devices": "Apparaten",
   "nav.settings": "Instellingen",
+  "nav.demo": "Demo",
   "sidebar.roleLabel": "Rol:",
   "header.summary": "Overzicht",
   "header.wellness": "Welzijn",
@@ -16,6 +17,43 @@
   "header.devices": "Apparaten",
   "header.settings": "Instellingen",
   "header.pilot": "Pilotdashboard",
+  "demo.title": "Demo",
+  "demo.orgStructure": "Organisatie",
+  "demo.demographics": "Demografie",
+  "demo.genderOverall": "Geslacht — Totaal",
+  "demo.ageOverall": "Leeftijd — Totaal",
+  "demo.byDepartment": "Per afdeling",
+  "demo.shiftPattern": "Dienstpatroon",
+  "demo.exportBrief": "Exporteer siteprofiel (PDF)",
+  "demo.badge": "Demo · {name} · {headcount} medewerkers · 24/7",
+  "demo.rotation": "Rotatie",
+  "demo.shifts": "Diensten",
+  "demo.headcount": "Bezetting",
+  "demo.site": "Locatie",
+  "demo.brigades": "Brigades",
+  "demo.pattern": "Patroon",
+  "demo.day": "Dag",
+  "demo.night": "Nacht",
+  "demo.off": "Vrij",
+  "demo.department": "Afdeling",
+  "demo.departmentCount": "{count} afdelingen",
+  "demo.rotationDetail": "{on} dagen aan / {off} dagen vrij",
+  "demo.shiftMetaOps": "{groups}: {pattern}",
+  "demo.shiftMetaSupport": "{groups}: {pattern}",
+  "demo.departmentSummary": "{name}: {headcount}",
+  "demo.shiftSummary": "{group} {brigade}: {pattern}",
+  "demo.gender.male": "Mannen",
+  "demo.gender.female": "Vrouwen",
+  "demo.gender.other": "Overig",
+  "demo.shiftLabel.day": "{label}-dienst",
+  "demo.shiftLabel.night": "{label}-dienst",
+  "demo.shiftLabel.off": "{label}",
+  "demo.heroAlt": "{name}-illustratie offshore platform",
+  "demo.heroLabel": "{name} hero-afbeelding",
+  "demo.error": "Kan demogegevens niet laden",
+  "demo.loading": "Demogegevens laden…",
+  "demo.exportUnavailable": "Export niet beschikbaar.",
+  "demo.exportError": "PDF kan niet worden geëxporteerd",
   "section.engagementOverview": "Betrokkenheids-KPI's",
   "section.wellbeingTracker": "Welzijnsscore-tracker",
   "section.breakdowns": "Risicoverdeling",
